syntax = "proto3";
import "registry_server.proto";

service ClientManagement {
    rpc JoinServer (Client_information) returns (Success);
    rpc LeaveServer (Client_information) returns (Success);
}

message Clientele {
    repeated Client_information clients = 1;
}
